# django-pictures

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CNAME  CONTRIBUTING.md  LICENSE  Makefile  README.md  linter-requirements.txt  pyproject.toml  setup.cfg
.benchmarks/Darwin-CPython-3.12-64bit/: 0001_b8e1bbbd362083c32d97b301d1d8fea5f21c6a26_20260416_115237_uncommited-changes.json
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/agents/: superjoe.agent.md
.github/workflows/: ci.yml  release.yml
pictures/: __init__.py  apps.py  checks.py  conf.py  migrations.py  models.py  signals.py  tasks.py  urls.py  utils.py  validators.py  views.py
pictures/contrib/: rest_framework.py
pictures/locale/de/LC_MESSAGES/: django.po
pictures/management/commands/: regenerate_pictures.py
pictures/templates/pictures/: picture.html
pictures/templatetags/: pictures.py
tests/: bench_picture.py  conftest.py  manage.py  test_benchmarks.py  test_checks.py  test_conf.py  test_migrations.py  test_models.py  test_signals.py  test_tasks.py  test_templatetags.py  test_utils.py  test_validators.py  test_views.py
tests/assets/: ps_cmyk.icc  ps_rgb.icc
tests/contrib/: test_cleanup.py  test_rest_framework.py
tests/testapp/: __init__.py  asgi.py  celery_app.py  models.py  settings.py  urls.py  views.py  wsgi.py
tests/testapp/migrations/: 0001_initial.py  0002_alter_profile_picture.py  0003_validatormodel.py  0004_jpegmodel.py  0005_alter_profile_picture.py  0006_profile_other_picture.py
tests/testapp/templates/testapp/: base.html  profile_detail.html  test.html
