[build-system]
requires = ["flit_core>=3.2", "flit_scm", "wheel"]
build-backend = "flit_scm:buildapi"

[project]
name = "django-pictures"
authors = [
  { name = "Johannes Maron", email = "johannes@maron.family" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["pillow", "Django", "image", "pictures", "WebP", "AVIF"]
dynamic = ["version", "description"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Environment :: Web Environment",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
]
requires-python = ">=3.9"
dependencies = ["django>=4.2.0", "pillow>=11.3.0"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-django",
  "redis",
]
lint = [
  "bandit==1.8.6",
  "black==25.9.0",
  "flake8==7.3.0",
  "isort==6.0.1",
  "pydocstyle[toml]==6.3.0",
]
dramatiq = [
  "django-dramatiq",
]
celery = [
  "celery",
]
django-rq = [
  "django-rq",
]
drf = [
  "djangorestframework",
]
cleanup = [
  "django-cleanup",
]

[project.urls]
Project-URL = "https://github.com/codingjoe/django-pictures"
Changelog = "https://github.com/codingjoe/django-pictures/releases"
Source = "https://github.com/codingjoe/django-pictures"
Documentation = "https://github.com/codingjoe/django-pictures#django-pictures"
Issue-Tracker = "https://github.com/codingjoe/django-pictures/issues"

[tool.flit.module]
name = "pictures"

[tool.setuptools_scm]
write_to = "pictures/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --tb=short -rxs"
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "tests.testapp.settings"

[tool.coverage.run]
source = ["pictures"]

[tool.coverage.report]
show_missing = true

[tool.isort]
atomic = true
line_length = 88
known_first_party = "pictures, tests"
include_trailing_comma = true
default_section = "THIRDPARTY"
combine_as_imports = true
skip = ["pictures/_version.py"]

[tool.pydocstyle]
add_ignore = "D1"
